chore: remove idea folder

--- a/package.json
+++ b/package.json
@@ -10,23 +10,31 @@
     "dev:remix": "remix run",
     "dev:css": "postcss styles --base styles --dir app/styles -w",
     "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@remix-run/node": "^0.17.5",
     "@remix-run/react": "^0.17.5",
+    "@remix-run/serve": "^0.17.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.0-beta.0",
     "remix": "^0.17.5",
-    "@remix-run/serve": "^0.17.5",
-    "@remix-run/node": "^0.17.5",
     "tailwindcss": "2.2.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
     "@remix-run/dev": "^0.17.5",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/react": "^6.3.6",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.4",
     "autoprefixer": "10.3.1",
+    "babel-loader": "^8.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "8.3.6",
     "postcss-cli": "8.3.1",
