--- a/package.json
+++ b/package.json
@@ -33,11 +33,18 @@
     "@storybook/react": "^6.3.6",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "autoprefixer": "10.3.1",
     "babel-loader": "^8.2.2",
+    "eslint": "7.31.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "npm-run-all": "^4.1.5",
     "postcss": "8.3.6",
     "postcss-cli": "8.3.1",
+    "prettier": "2.3.2",
     "typescript": "^4.1.2"
   },
   "engines": {
