--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.1",
     "npm-run-all": "^4.1.5",
     "postcss": "8.3.6",
     "postcss-cli": "8.3.1",
@@ -50,5 +52,16 @@
   "engines": {
     "node": ">=16"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "lint-staged": {
+    "*.(ts|tsx)": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
