--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-essentials": "^6.3.6",
     "@storybook/addon-links": "^6.3.6",
+    "@storybook/addon-postcss": "2.0.0",
     "@storybook/react": "^6.3.6",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.4",
